--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches: [ master ]
   schedule:
-    cron: '8 23 * * *'
+    - cron: '9 23 * * *'
+    - cron: '1 22 * * *'
 
 # A workflow run is made up of one or more jobs
 jobs:
