--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name: Send email with NY Times
+name: Get NY Times puzzle links
 
 on:
   push:
     branches: [ master ]
   schedule:
-    - cron: '15 * * * *'
+    - cron: '18 * * * *'
     - cron: '1 22 * * *'
 
 # A workflow run is made up of one or more jobs
