--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,9 @@ name: Get NY Times puzzle links
 on:
   schedule:
     - cron: '20/5 * * * *'
+  push:
+    branches: [ master ]
+
 
 # A workflow run is made up of one or more jobs
 jobs:
