--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,8 @@
-
 name: Get NY Times puzzle links
 
 on:
   schedule:
-    - cron: '20/5 * * * *'
+    - cron: '2 * * * *'
   push:
     branches: [ master ]
 
