--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,8 @@ jobs:
     - name: Run Node scraper
       run: node index.js >> puzzle_output.txt
 
+    # Show everything (temporary)
+    - name: list links
+      run: cat puzzle_output.txt
+
     
