--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Get Sudoku puzzle links
 
 on:
   schedule:
-    - cron: '2 * * * *'
+    - cron: '5 4/6 * * *'
   push:
     branches: [ master ]
 
