Fix YML formatting

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,9 @@ jobs:
 
     # Set up the output file
     - name: Set up puzzle output file
-      run: echo -n "Sudoku puzzles for " >> puzzle_output.md
-      run: date +'%Y-%m-%d' >> puzzle_output.md
+      run: | 
+        echo -n "Sudoku puzzles for " >> puzzle_output.md
+        date +'%Y-%m-%d' >> puzzle_output.md
 
     # Run Python stuff
     - name: Set up Python
