--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,8 +54,7 @@ jobs:
         path: puzzle_output.md
 
     - name: Create puzzle issue
-      uses: maxkomarychev/oction-create-issue@v0.7.1
+      uses: peter-evans/create-issue-from-file@v2
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        title: test issue
-        body: Hello, world!
+        title: Another test issue
+        content-filepath: ./puzzle_output.md
