--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Set up puzzle output file
       run: | 
         echo "::set-env name=TODAY::$(date +'%Y-%m-%d')"
-        echo "# Sudoku puzzles for $TODAY" >> puzzle_output.md
+        echo \# Sudoku puzzles for $TODAY" >> puzzle_output.md
         echo -n "Generated at " >> puzzle_output.md
         date >> puzzle_output.md
 
@@ -56,5 +56,5 @@ jobs:
     - name: Create puzzle issue
       uses: peter-evans/create-issue-from-file@v2
       with:
-        title: Daily Sudokus for 
+        title: Daily Sudokus for $TODAY
         content-filepath: ./puzzle_output.md
