--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,13 @@ jobs:
     # Check out code
     - uses: actions/checkout@v2
 
+    # Set the date
+    - name: Set the date
+      run: echo "::set-env name=TODAY::$(date +'%Y-%m-%d')"
+
     # Set up the output file
     - name: Set up puzzle output file
       run: | 
-        echo "::set-env name=TODAY::$(date +'%Y-%m-%d')"
         echo \# Sudoku puzzles for $TODAY >> puzzle_output.md
         echo -n "Generated at " >> puzzle_output.md
         date >> puzzle_output.md
