test: update push -> master

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ name: Get Sudoku puzzle links
 on:
   schedule:
     - cron: "0 05 * * *"
+  push: { branches: ["master"] }
   workflow_dispatch:
 
 jobs:
